syntax = "proto3";

option go_package = "github.com/k-jun/grpc";

// https://developers.google.com/protocol-buffers/docs/proto3
// package northpole;

service NorthPole {
  rpc JoinPublicRoom(MatchInfo) returns (stream RoomInfo) {}
  rpc CreatePrivateRoom(RoomCreateInfo) returns (stream RoomInfo) {}
  rpc JoinPrivateRoom(MatchInfo) returns (stream RoomInfo) {}
  rpc LeaveRoom(MatchInfo) returns (Empty) {}
}

message Empty {}

enum RoomStatus {
  Open = 0;
  Close = 1;
}

message RoomInfo {
  string id = 1;
  RoomStatus status = 2;
  int64 current_number_of_users = 3;
  int64 max_number_of_users = 4;
}

message RoomCreateInfo {
  string room_id = 1;
  string user_id = 2;
  int64 max_number_of_users = 3;
}

message MatchInfo {
  string room_id = 1;
  string user_id = 2;
}
